ajuste de bugs